# psecAPP

./: README.md  db.sqlite3  pyproject.toml
app_psec/: admin.py  apps.py  models.py  views.py
app_psec/migrations/: 0001_initial.py  0002_alter_questao_descricao_alter_questao_numero.py  0003_rename_descricao_questao_descricao_seo_and_more.py  0004_material_apoio_descricao_seo_and_more.py  0005_material_apoio_disciplina.py  0006_material_apoio_resumo.py  0007_questao_show.py
app_psec/static/css/: style.css
app_psec/static/icons/: package.json
app_psec/static/js/: scripts.js
app_psec/templates/: atividade.html  base.html  contato.html  home.html  material.html  todas_atividades.html  todos_materiais.html
config/: settings.py  urls.py
documentos/: Documentação TCC.docx
start/Scripts/: activate  activate.bat
